# rust-backend-microservices-bhuman

./: README.md
ai_studio/: .gitignore  Cargo.toml  Shuttle.toml  build.rs  schema.sql
ai_studio/src/: lib.rs
ai_studio/src/handlers/: actor_handler.rs  csv_handler.rs  folder_handler.rs  mod.rs  segment_handler.rs  video_instance_handler.rs  ws_handler.rs
ai_studio/src/models/: actor.rs  audio.rs  csv.rs  folder.rs  mod.rs  param.rs  segment.rs  video.rs
api_keygen_microservice/: Cargo.toml  schema.sql
api_keygen_microservice/src/: lib.rs
api_keygen_microservice/src/handlers/: api_keygen.rs  mod.rs
api_keygen_microservice/swagger-ui/: index.html
auth_service/: Cargo.toml  Shuttle.toml  build.rs  schema.sql
auth_service/src/: lib.rs
auth_service/src/handlers/: auth_handler.rs
auth_service/src/models/: auth.rs
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  App.module.css
contacts_microservice/: Cargo.toml  Shuttle.toml  build.rs  schema.sql  sqlx-data.json
contacts_microservice/src/: lib.rs
contacts_microservice/src/contacts/: contacts.rs  contacts_handler.rs  mod.rs  shopify.rs
contacts_microservice/src/groups/: group.rs  groups_handler.rs  mod.rs
contacts_microservice/src/tags/: mod.rs  tag.rs  tags_handler.rs
file_manager_microservice/: .env  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yml  schema.sql
file_manager_microservice/src/: db.rs  dir.rs  main.rs  sock.rs  types.rs  ud.rs
file_manager_microservice/src/model/: file.rs
invite_microservice/: Cargo.toml  Shuttle.toml  schema.sql  sqlx-data.json
invite_microservice/src/: lib.rs
invite_microservice/src/invite/: invite.rs  invite_handler.rs  mod.rs
microservice_utils/: Cargo.toml  build.rs
microservice_utils/proto/: auth_service.proto  workspace_service.proto
microservice_utils/src/: lib.rs
microservice_utils/src/jwt/: auth.rs  extractor.rs
microservice_utils/src/server/: grpc.rs  mod.rs  response.rs
producer/: Cargo.toml  Shuttle.toml  schema.sql  sqlx-data.json
producer/src/: lib.rs  main.rs
producer/src/contacts/: contacts.rs  contacts_handler.rs  mod.rs
producer/src/invite/: invite.rs  invite_handler.rs
producer/src/producer/: mod.rs  producer.rs  test_handler.rs  ws_message.rs
producer/src/user/: mod.rs  user.rs  user_handler.rs
producer/src/utils/: response.rs
producer/src/workspace/: mod.rs  workspace.rs  workspace_handler.rs
user_microservice/: .gitignore  Cargo.toml  Shuttle.toml  build.rs  schema.sql  sqlx-data.json
user_microservice/proto/: user_service.proto
user_microservice/src/: lib.rs
user_microservice/src/user/: user.rs  user_handler.rs
workspace_microservice/: Cargo.toml  Secrets.toml  Shuttle.toml  build.rs  schema.sql  sqlx-data.json
workspace_microservice/src/: lib.rs
workspace_microservice/src/producer/: mod.rs  ws_message.rs
workspace_microservice/src/workspace/: mod.rs  param.rs  workspace_handler.rs  workspace_type.rs
