[package]
name = "api_keygen_microservice"
version = "0.1.0"
edition = "2021"


[lib]
name = "api_keygen_microservice"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "api_keygen_microservice"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["chrono","macros", "postgres", "uuid", "time", "bigdecimal", "offline" ] }
axum-server = "0.4.0"
axum = {version="0.5",features=["ws","headers"]}
axum-macros = "0.1.0"
tokio = { version = "1.19.2", features = ["full"] }
anyhow = "1.0.53"
openssl = "0.10.41"
headers = "0.3.7"
schemars = { version = "0.8" }
okapi = { version = "0.7.0-rc.1"}
openapi-rs = {git = "https://github.com/bhuman-ai/openapi-rs"}
http = "0.2"
nanoid = "0.4.0"
hex = "0.4.3"
microservice_utils = {path = "../microservice_utils/"}
tower = {version = "0.4.11",features=["full"]}
tower-http = { version = "0.2.2", features = ["fs", "trace", "set-header","cors"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
shuttle-service = { version = "0.3.3", features = ["web-axum", "sqlx-postgres"] }
sync_wrapper = "0.1"
tonic = { version = "0.5", features = ["tls", "tls-roots", "prost"] }
pin-project = "1"
prost = "0.8"

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"] }
