[package]
name = "file-manager-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
axum = { version = "0.5.8", features = ["ws", "headers","multipart","headers"] }
axum-macros = "0.2.3"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace", "cors"] }
headers = "0.3"
async-trait = "0.1.51"
async-stream = "0.3.2"
clap = "2.33.2"
schemars = { version = "0.8" }

sqlx = { version = "0.5.10", features = ["chrono","macros", "runtime-tokio-rustls", "postgres", "uuid", "time", "bigdecimal", "offline" ] }
dotenv = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }
rust-s3 = "0.32.1"
aws-sdk-s3 = "0.16.0"
aws-config = "0.46.0"

rusoto_core = "0.47"
rusoto_s3 = "0.47"
rusoto_credential = "0.47"

serde_json = "1.0"
serde = "1.0.140"
uuid = { version = "1.1.2", features = ["v4"] }

microservice_utils = {path = "../microservice_utils/"}
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }