[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["chrono", "macros", "postgres", "uuid", "time", "bigdecimal", "offline"] }
rdkafka = { version = "0.28.0" }
axum = {version="0.5",features=["ws","headers"]}
axum-macros = "0.1.0"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = "0.6.9"
anyhow = "1.0.53"
tower = {version = "0.4.11",features=["full"]}
tower-http = { version = "0.2.2", features = ["fs", "trace", "set-header","cors"] }
serde = '1'
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures-util = "0.3.17"
uuid = { version = "0.8", features = ["serde", "v4"] }
headers = "0.3.5"
reqwest = "0.11.6"
dotenv = "0.15.0"
lazy_static = "1.4"
tiny_id = "0.1.5"
serde_urlencoded = "0.7.1"
derive_more = "0.99.17"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

shuttle-service = { version = "0.3", features = ["web-axum", "sqlx-postgres"] }
sync_wrapper = "0.1"